<resources>
    <string name="app_name">S-12</string>
    <string name="groups">Groups</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="calculator">Sobriety</string>
    <string name="news">News</string>
    <string name="events">Events</string>
    <string name="exit">Exit</string>
    <string name="hello_blank_fragment">hello_blank_fragment</string>
    <string name="homepage">Home</string>
    <string name="news_title">News</string>
    <string name="events_title">Events</string>
    <string name="main_title"></string>
    <string name="groups_title">Groups</string>
    <string name="calender_title">Sobriety</string>
    <string name="daysago">Days Ago</string>
    <string name="searchgroups">Search</string>
    <string name="calender__add_title">Add Sobriety Date</string>
    <string name="subriety_title">Title</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="calender_edit_title">Edit Sobriety</string>
    <string name="city">City</string>
    <string name="fromtime">From</string>
    <string name="totime">To</string>
    <string name="language">Language</string>
    <string name="day">Day</string>
    <string name="comments">Comments</string>
    <string name="news_detalis_title">News</string>
    <string name="contact">Contact</string>
    <string name="prayers">Prayers</string>
    <string name="mainoffice">SA Israel Office</string>
    <string name="womenhelp">Wonmen Support</string>
    <string name="hotline">Hotline Committee</string>
    <string name="sanews">SA News Updates</string>
    <string name="website">SA Website Committee</string>
    <string name="traditions">Ethics and traditions committee</string>
    <string name="contacts">Contacts</string>
    <string name="contactname">nickname</string>
    <string name="phone">Phone</string>
    <string name="edit_contact">Edit Contact</string>
    <string name="contact_edit_title">Edit Contact</string>
    <string name="contact_add_title">Add Contact</string>
    <string name="sendmessage">Send Message</string>
    <string name="email">Email:</string>
    <string name="wellcome">Wellcome</string>
    <string name="committeeName">Name:</string>
    <string name="register">Register</string>
    <string name="registration">Registration</string>
    <string name="send">Send</string>
    <string name="register_comments">Please tell us about the live meetings you are going to and two of your SA friends</string>
    <string name="send_message">Send Message</string>
    <string name="message">Message</string>
    <string name="incoming_call_title">One of your best friends is calling</string>
    <string name="close">Close</string>
    <string name="incoming_call_title_unanswered">you have an unanswered call from one of your good friends</string>
    <string name="show_custom_call_dialog">Show Custom Incoming Call Dialog</string>
    <string name="allow_push_notifications">Allow News/Events Notifications</string>
    <string name="select_account">Select Account</string>
    <string name="KM">Km</string>
    <string name="action_edit">Edit</string>
    <string name="sharevia">Share Via</string>
    <string name="sharecontact">Contact</string>
    <string name="local">us</string>
    <string name="mynameis">My Name Is</string>
    <string name="iwoulsliketoupdate">I Would Like To Update That</string>
    <string name="myphoneis">My Phone Is</string>
    <string name="hisaiwouldliketoupdateagroup">Hi SA I would like to update this group</string>
    <string name="hisaiwouldliketoupdatethisremoved">Hi SA I would like to update this group does not exists any more</string>
    <string name="hisaiwouldliketoupdatenewgoup">Hi SA I would like to update about a new group</string>
    <string name="new_event_subject">Hi SA there is a new events coming soon</string>
    <string name="new_news_subject">Hi SA I have some news for you</string>
    <string name="event_details">Event Details</string>
    <string name="news_details">News Details</string>
    <string name="new_news_update_subject">Update Existing News / Event</string>
    <string name="news_subject">News / Event Subject</string>
    <string name="field_required">Required!</string>
    <string name="password">password</string>
    <string name="add_login">Login with password?</string>
    <string name="username">User Name</string>
    <string name="prison_committee">Prison Committee</string>
    <string name="literature_committee">Literature Committee</string>
    <string name="translation_committee">Translation Committee</string>
    <string name="ok">OK</string>
    <string name="reg_success_message">You have successfully registered, the information you submitted will be reviewed, please be patient! this can take 48 hours until we confirm your details</string>
    <string name="title_activity_login">Enter</string>
    <string name="login">Login</string>
    <string name="rememeberme">Remember Me</string>
    <string name="wellcome_private">Welcome! Please keep your friends privacy</string>
    <string name="you_are_not_loggedin">Available only for logged in members</string>
    <string name="bad_username_or_password">Username and password do not match.</string>
    <string name="passwordReset">Password Reset</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="password_required">Your Password Must Be at Least 6 Characters</string>
    <string name="are_you_sure_you_want_to_exit">Are you sure you want to exit?</string>
    <string name="locked_content">this content is visible only for logged in users</string>
    <string name="you_are_note_confirmed">dear SA member you are not confirmed yet, please be patient until we confirm your details, if after 48 hours you did not get confirmed please contact website@sa-israel.org</string>
    <string name="reg_failed_message">Registration failed, please try again later</string>
    <string name="confirmpassword">Confirm Password</string>
    <string name="passwords_do_not_match">Passwords do not match</string>
    <string name="lock_app_on_entry">Enable app lock</string>
    <string name="create_your_pin">SET PIN</string>
    <string name="re_enter_your_pin">RE ENTER PIN</string>
    <string name="seconds_left">"Please Try  In "</string>
    <string name="seconds">seconds</string>
    <string name="public_information_committee">Public Information Committee</string>
    <string name="title_activity_lock">lock</string>
    <string name="loadingcontacts">Loading Contacts...</string>
    <string name="importPhoneContacts">Import Phone Contacts</string>
    <string name="savingdata">Saving...</string>
    <string name="aad">Alternate assembly delegate</string>
    <string name="gad">General assembly delegate</string>
    <string name="ig_jerusaem">Jerusalem Zone</string>
    <string name="ig_center">Central Zone</string>
    <string name="ig_baitshemesh">Beit Shemesh Zone</string>
    <string name="ig_northh">North Zone</string>
    <string name="ig_eng">English Groups</string>
    <string name="trsr">Treasurer</string>
    <string name="download">Download</string>
</resources>