<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_delete"
        android:orderInCategory="50"
        android:icon="@drawable/ic_delete_black_24dp"
        android:title="@string/action_settings"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_edit"
        android:orderInCategory="50"
        android:icon="@drawable/ic_edit_color_black_24dp"
        android:title="@string/action_edit"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_add"
        android:orderInCategory="50"
        android:icon="@drawable/ic_add_black_24dp"
        android:title="@string/action_edit"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_login"
        android:orderInCategory="50"
        android:title="@string/login"
        app:showAsAction="always" />
</menu>
