<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="sa.israel.org.SettingsFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="60dp"
        android:orientation="vertical">

        <Switch
            android:id="@+id/swShowCallDialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:checked="true"
            android:text="@string/show_custom_call_dialog" />

        <Switch
            android:id="@+id/swAllowNotifications"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:checked="true"
            android:text="@string/allow_push_notifications" />

        <Switch
            android:id="@+id/swLockScreen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:checked="false"
            android:text="@string/lock_app_on_entry" />

    </LinearLayout>
</FrameLayout>
